--- a/css/index.css
+++ b/css/index.css
@@ -1,42 +1,119 @@
-header{
-    background-color: #BBBBBB;
-    padding: 10px 0;
+* {
+    font-family: 'Inter', sans-serif;
 }
 
-nav{
+header {
+    background-color: #4caf50;
+    font-family: 'Inter', sans-serif;
+    box-shadow: 0px 4px 8px 1px rgba(0, 0, 0, 0.16);
+    height: 46px;
+    display: flex;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+}
+
+nav {
     width: 100%;
     display: inline-flex;
+    padding-right: 15px;
 }
 
-nav h1{
-    font-size: 32px;
-    margin: auto 10px;
-}
-
-nav ul{
+nav ul {
     margin-left: auto;
     margin-right: 0px;
 }
 
-nav li{
-    display: inline;
-    margin: 0 0 0 15px;
+nav li {
+    display: inline-flex;
+    margin: 0px 5px;
+    padding: 0px 15px;
+    height: 100%;
+    align-items: center;
 }
 
-nav a:hover{
-    color: rgb(137, 94, 255);
-    text-decoration: underline;
+nav a:hover li {
+    background-color: #459c48;
 }
 
-nav a{
+nav a {
     text-transform: uppercase;
     text-decoration: none;
     font-weight: bold;
-    color: #000000;
+    color: white;
     font-size: 22px;
 }
 
-.navegacion{
-    padding-top: 5px;
-    margin: auto 10px auto auto;
+body {
+    min-height: 990px;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    height: 80%;
+}
+
+footer {
+    height: 10%;
+    margin-top: auto;
+    box-shadow: 0px -6px 8px 1px rgba(0, 0, 0, 0.16);
+    background-color: rgb(66, 66, 66);
+    display: flex;
+    justify-content: space-around;
+    padding: 60px;
+}
+
+h3 {
+    font-size: 22px;
+    color: white;
+    font-family: 'Inter', sans-serif;
+}
+
+footer h3 {
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.icon {
+    display: inline-flex;
+}
+
+.icon li {
+    height: 36px;
+    width: 36px;
+    margin: 0px 10px;
+    border: 2px solid #ffffff;
+    font-size: 24px;
+    border-radius: 50%;
+}
+
+.icon img {
+    display: block;
+    margin: auto;
+    margin-top: 6px;
+    height: 24px;
+    width: 24px;
+    filter: invert(87%) sepia(0%) saturate(7495%) hue-rotate(38deg) brightness(123%) contrast(97%);
+}
+
+.foot-about li {
+    text-align: center;
+    padding: 5px;
+}
+
+.foot-about a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.foot-about li:hover {
+    background-color: rgb(105, 104, 104);
+}
+
+.icon li:hover{
+    background-color: rgb(105, 104, 104);
 }
