Listo para publicar v1

--- a/css/footer-header.css
+++ b/css/footer-header.css
@@ -119,3 +119,13 @@ footer h3 {
 .icon li:hover {
     background-color: rgb(105, 104, 104);
 }
+
+@media screen and (max-width: 420px) {
+    footer{
+        flex-direction: column;
+    }
+
+    footer>div {
+        margin: 0.5em auto;
+    }
+}
